# Hexapod

./: README.md
HexapodController/: HexapodController.sln  README.md
HexapodController/HexapodController/HexapodController/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  HexapodController.csproj
HexapodController/HexapodController/HexapodController.Android/: HexapodController.Android.csproj  MainActivity.cs
HexapodController/HexapodController/HexapodController.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
HexapodController/HexapodController/HexapodController.iOS/: AppDelegate.cs  HexapodController.iOS.csproj  Info.plist  Main.cs
HexapodController/HexapodController/HexapodController.iOS/Properties/: AssemblyInfo.cs
HexapodController/HexapodController/HexapodController/CustomControls/: VirtualJoystick.xaml  VirtualJoystick.xaml.cs
HexapodController/HexapodController/HexapodController/Models/: Item.cs
HexapodController/HexapodController/HexapodController/Services/: BleService.cs  IBleService.cs  IDataStore.cs  MockDataStore.cs
HexapodController/HexapodController/HexapodController/ViewModels/: AboutViewModel.cs  BaseViewModel.cs  BleDevicesViewModel.cs  ItemDetailViewModel.cs  ItemsViewModel.cs  LoginViewModel.cs  NewItemViewModel.cs  RcControlViewModel.cs
Hexapod_code/: CMakeLists.txt  README.md  ble_hexapod.gatt  main.cpp
Hexapod_code/headers/BLE/: BLE.h
Hexapod_code/headers/Hexapod/: Hexapod.h
Hexapod_code/headers/IKSolver/: IKSolver.h
Hexapod_code/headers/RCData/: RCData.h
Hexapod_code/headers/TimeInfo/: TimeInfo.h
Hexapod_code/headers/Vector/: Vector2.h  Vector3.h
Hexapod_code/headers/common/: Leg.h  ServoDrivers.h  defines.h
Hexapod_code/headers/common/Exception/: ExceptionHandler.h
Hexapod_code/headers/common/Move/: Move.h
Hexapod_code/headers/common/States/: IState.h
Hexapod_code/headers/common/States/IdleState/: IdleState.h
Hexapod_code/headers/common/States/InitState/: InitState.h
Hexapod_code/headers/common/States/WalkState/: WalkState.h
Hexapod_code/headers/helpers/: helpers.h
Hexapod_code/libs/pca9685/include/: pca9685.h
Hexapod_code/src/BLE/: BLE.cpp
Hexapod_code/src/Hexapod/: Hexapod.cpp
Hexapod_code/src/IKSolver/: IKSolver.cpp
Hexapod_code/src/RCData/: RCData.cpp
Hexapod_code/src/TimeInfo/: TimeInfo.cpp
Hexapod_code/src/Vector/: Vector2.cpp  Vector3.cpp
Hexapod_code/src/common/: Leg.cpp  ServoDrivers.cpp
Hexapod_code/src/common/States/IdleState/: IdleState.cpp
Hexapod_code/src/common/States/InitState/: InitState.cpp
Hexapod_code/src/common/States/WalkState/: WalkState.cpp
Hexapod_code/src/helpers/: helpers.cpp
(+14 files in other folders)
